# src/main/java/org/cyberrealm/tech/bazario/backend/api/impl/ImageApiDelegateImpl.java
@@ -1,0 +1,33 @@
+package org.cyberrealm.tech.bazario.backend.api.impl;
+
+import lombok.RequiredArgsConstructor;
+import org.cyberrealm.tech.bazario.backend.api.ImageApiDelegate;
+import org.cyberrealm.tech.bazario.backend.service.ImageService;
+import org.springframework.http.ResponseEntity;
+import org.springframework.stereotype.Service;
+import org.springframework.web.multipart.MultipartFile;
+
+import java.net.URI;
+
+@Service
+@RequiredArgsConstructor
+public class ImageApiDelegateImpl implements ImageApiDelegate {
+
+    private final ImageService imageService;
+
+    @Override
+    public ResponseEntity<String> changeImage(String type, Long id, URI oldValue, MultipartFile file) {
+        return ImageApiDelegate.super.changeImage(type, id, oldValue, file);
+    }
+
+    @Override
+    public ResponseEntity<Void> deleteImage(String type, Long id, URI url) {
+        return ImageApiDelegate.super.deleteImage(type, id, url);
+    }
+
+    @Override
+    public ResponseEntity<String> saveImage(String type, Long id, MultipartFile file) {
+        var url = imageService.addImageInAd(id, file);
+        return ImageApiDelegate.super.saveImage(type, id, file);
+    }
+}
